--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22193,7 +22193,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Tod durch die Apokalypse</source>
-        <target>Tod durch die Apokalypse</target>
+        <target>Mort de l'Apocalypse</target>
       </segment>
     </unit>
     <unit id="EhRWrg3">
@@ -22204,7 +22204,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Eine Katastrophe apokalyptischen Ausmaßes hat dich, deine Stadt und alles in der Umgebung hinweggefegt. Es ist, als hätte jemand die gesamte Welt... gereinigt.</source>
-        <target>Eine Katastrophe apokalyptischen Ausmaßes hat dich, deine Stadt und alles in der Umgebung hinweggefegt. Es ist, als hätte jemand die gesamte Welt... gereinigt.</target>
+        <target>Un désastre aux proportions apocalyptiques vous a anéanti, vous, votre ville et tout ce qui se trouve dans les environs. C’est comme si ce monde avait été... purgé.</target>
       </segment>
     </unit>
     <unit id="TI4f6dK">
@@ -22215,7 +22215,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Vereinzelte Bürger berichten von einem merkwürdigen Phänomen am Himmel... Ihr solltet die Alkoholvorräte in der Bank pürfen.</source>
-        <target>Vereinzelte Bürger berichten von einem merkwürdigen Phänomen am Himmel... Ihr solltet die Alkoholvorräte in der Bank pürfen.</target>
+        <target>Certains citoyens rapportent un phénomène étrange dans le ciel... Vous devriez vérifier les réserves d’alcool dans la banque.</target>
       </segment>
     </unit>
     <unit id="J1ZyqLO">
@@ -22226,7 +22226,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Einige Bürger haben berichtet, während ihrer Abschätzung ein rotes Blitzen am Horizont gesehen zu haben.</source>
-        <target>Einige Bürger haben berichtet, während ihrer Abschätzung ein rotes Blitzen am Horizont gesehen zu haben.</target>
+        <target>Certains citoyens ont déclaré avoir vu un éclair rouge à l’horizon lors de leur estimation.</target>
       </segment>
     </unit>
     <unit id="kXaqluQ">
@@ -22237,7 +22237,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Ein Großteil der Bürger, die heute auf dem Wachturm waren, haben ein lautes Grollen in der Ferne vernommen.</source>
-        <target>Ein Großteil der Bürger, die heute auf dem Wachturm waren, haben ein lautes Grollen in der Ferne vernommen.</target>
+        <target>Un grand nombre de citoyens qui se trouvaient à la tour de guet aujourd’hui ont entendu un grondement bruyant au loin.</target>
       </segment>
     </unit>
     <unit id=".8QsYID">
@@ -22248,7 +22248,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Zusatzbemerkung zur heutigen Abschätzung: Der Himmel hat sich blutrot gefärbt. Das sieht nicht gut aus, Leute...</source>
-        <target>Zusatzbemerkung zur heutigen Abschätzung: Der Himmel hat sich blutrot gefärbt. Das sieht nicht gut aus, Leute...</target>
+        <target>Note supplémentaire pour l’estimation d’aujourd’hui : le ciel est devenu rouge sang. Ce n'est pas un bon signe les gars...</target>
       </segment>
     </unit>
     <unit id="2soUcg3">
@@ -22259,7 +22259,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Das sieht nicht gut aus... Die Zombies werden heute Nacht nicht unser größtes Problem sein.</source>
-        <target>Das sieht nicht gut aus... Die Zombies werden heute Nacht nicht unser größtes Problem sein.</target>
+        <target>Ça n’a pas l’air bon... Les zombies ne seront pas notre plus gros problème ce soir.</target>
       </segment>
     </unit>
     <unit id="SnHKJah" name="Beten">
@@ -22270,7 +22270,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Beten</source>
-        <target>Beten</target>
+        <target>Prier</target>
       </segment>
     </unit>
     <unit id="yOOoIBM" name="Es gibt keine Hoffnung!">
@@ -22281,7 +22281,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Es gibt keine Hoffnung!</source>
-        <target>Es gibt keine Hoffnung!</target>
+        <target>Il n'y a pas d'espoir !</target>
       </segment>
     </unit>
   </file>
