--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22410,7 +22410,7 @@
       </notes>
       <segment>
         <source>Tod durch die Apokalypse</source>
-        <target>Tod durch die Apokalypse</target>
+        <target>Muerte por el apocalipsis</target>
       </segment>
     </unit>
     <unit id="EhRWrg3">
@@ -22421,7 +22421,7 @@
       </notes>
       <segment>
         <source>Eine Katastrophe apokalyptischen Ausmaßes hat dich, deine Stadt und alles in der Umgebung hinweggefegt. Es ist, als hätte jemand die gesamte Welt... gereinigt.</source>
-        <target>Eine Katastrophe apokalyptischen Ausmaßes hat dich, deine Stadt und alles in der Umgebung hinweggefegt. Es ist, als hätte jemand die gesamte Welt... gereinigt.</target>
+        <target>Una catástrofe de proporciones apocalípticas te ha arrasado a ti, a tu pueblo y a todo lo que te rodea. Es como si alguien hubiera... limpiado el mundo entero.</target>
       </segment>
     </unit>
     <unit id="TI4f6dK">
@@ -22432,7 +22432,7 @@
       </notes>
       <segment>
         <source>Vereinzelte Bürger berichten von einem merkwürdigen Phänomen am Himmel... Ihr solltet die Alkoholvorräte in der Bank pürfen.</source>
-        <target>Vereinzelte Bürger berichten von einem merkwürdigen Phänomen am Himmel... Ihr solltet die Alkoholvorräte in der Bank pürfen.</target>
+        <target>Los ciudadanos ocasionales informan de un extraño fenómeno en el cielo... Deberías comprobar los suministros de alcohol en el banco.</target>
       </segment>
     </unit>
     <unit id="J1ZyqLO">
@@ -22443,7 +22443,7 @@
       </notes>
       <segment>
         <source>Einige Bürger haben berichtet, während ihrer Abschätzung ein rotes Blitzen am Horizont gesehen zu haben.</source>
-        <target>Einige Bürger haben berichtet, während ihrer Abschätzung ein rotes Blitzen am Horizont gesehen zu haben.</target>
+        <target>Algunos ciudadanos han informado haber visto un destello rojo en el horizonte durante su evaluación.</target>
       </segment>
     </unit>
     <unit id="kXaqluQ">
@@ -22454,7 +22454,7 @@
       </notes>
       <segment>
         <source>Ein Großteil der Bürger, die heute auf dem Wachturm waren, haben ein lautes Grollen in der Ferne vernommen.</source>
-        <target>Ein Großteil der Bürger, die heute auf dem Wachturm waren, haben ein lautes Grollen in der Ferne vernommen.</target>
+        <target>La mayoría de los ciudadanos que estaban hoy en la atalaya escucharon un fuerte estruendo en la distancia.</target>
       </segment>
     </unit>
     <unit id=".8QsYID">
@@ -22465,7 +22465,7 @@
       </notes>
       <segment>
         <source>Zusatzbemerkung zur heutigen Abschätzung: Der Himmel hat sich blutrot gefärbt. Das sieht nicht gut aus, Leute...</source>
-        <target>Zusatzbemerkung zur heutigen Abschätzung: Der Himmel hat sich blutrot gefärbt. Das sieht nicht gut aus, Leute...</target>
+        <target>Comentario adicional a la estimación de hoy: el cielo se ha vuelto rojo sangre. Eso no se ve bien gente...</target>
       </segment>
     </unit>
     <unit id="2soUcg3">
@@ -22476,7 +22476,7 @@
       </notes>
       <segment>
         <source>Das sieht nicht gut aus... Die Zombies werden heute Nacht nicht unser größtes Problem sein.</source>
-        <target>Das sieht nicht gut aus... Die Zombies werden heute Nacht nicht unser größtes Problem sein.</target>
+        <target>Eso no se ve bien... Los zombies no serán nuestro mayor problema esta noche.</target>
       </segment>
     </unit>
     <unit id="SnHKJah" name="Beten">
@@ -22487,7 +22487,7 @@
       </notes>
       <segment>
         <source>Beten</source>
-        <target>Beten</target>
+        <target>Rezar</target>
       </segment>
     </unit>
     <unit id="yOOoIBM" name="Es gibt keine Hoffnung!">
@@ -22498,7 +22498,7 @@
       </notes>
       <segment>
         <source>Es gibt keine Hoffnung!</source>
-        <target>Es gibt keine Hoffnung!</target>
+        <target>¡No hay esperanza!</target>
       </segment>
     </unit>
   </file>
