--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3654,5 +3654,16 @@
         <target><![CDATA[Le nombre de monticules de terre et de déchets vous indique qu'il n'y a sans doute plus grand chose à trouver ici. <p><em>Vous pouvez toutefois continuer à creuser pour trouver des ressources de mauvaise qualité pour les chantiers en ville.</em></p>]]></target>
       </segment>
     </unit>
+    <unit id="MNOavAj" name="Das Zombie Survival Game!">
+      <notes>
+        <note category="german">Das Zombie Survival Game!</note>
+        <note category="from">twig:///templates/web/framework.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Das Zombie Survival Game!</source>
+        <target>Le jeu de survie contre des zombies !</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
