--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -3662,7 +3662,7 @@
       </notes>
       <segment>
         <source>Das Zombie Survival Game!</source>
-        <target>Le jeu de survie contre des zombies !</target>
+        <target>le jeu de survie dans un monde peuplé de zombies !</target>
       </segment>
     </unit>
   </file>
