Diverses ES Translations

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22440,7 +22440,7 @@
       </notes>
       <segment>
         <source>Auszeichnungsdetails</source>
-        <target>Auszeichnungsdetails</target>
+        <target>Detalles del premio</target>
       </segment>
     </unit>
   </file>
