--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3814,7 +3814,7 @@
       </notes>
       <segment>
         <source>Details</source>
-        <target>Details</target>
+        <target>Detalles</target>
       </segment>
     </unit>
     <unit id="2Qh0PhD" name="Auf MyHordes erworbene Auszeichnungen">
@@ -3825,7 +3825,7 @@
       </notes>
       <segment>
         <source>Auf MyHordes erworbene Auszeichnungen</source>
-        <target>Auf MyHordes erworbene Auszeichnungen</target>
+        <target>Premios ganados en MyHordes</target>
       </segment>
     </unit>
     <unit id="hohD1vV" name="Importierte Auszeichnungen">
@@ -3836,7 +3836,7 @@
       </notes>
       <segment>
         <source>Importierte Auszeichnungen</source>
-        <target>Importierte Auszeichnungen</target>
+        <target>Premios importados</target>
       </segment>
     </unit>
   </file>
