--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -8818,7 +8818,7 @@
       </notes>
       <segment>
         <source>Du kannst diesen Gegenstand nur &lt;strong&gt;einmal am Tag&lt;/strong&gt; verwenden...</source>
-        <target><![CDATA[Du kannst diesen Gegenstand nur <strong>einmal am Tag</strong> verwenden...]]></target>
+        <target><![CDATA[Solo puedes usar este artículo <strong>una vez al día</strong>...]]></target>
       </segment>
     </unit>
     <unit id="et83IYx" name="So, zur Desinfektion nur noch draufspucken und hopp: Sieht wie neu aus!">
@@ -8849,7 +8849,7 @@
       </notes>
       <segment>
         <source>Hierfür brauchst du mindestens 5 AP.</source>
-        <target>Hierfür brauchst du mindestens 5 AP.</target>
+        <target>Para esto necesitas al menos 5 PA.</target>
       </segment>
     </unit>
     <unit id="793QxjT" name="Hierfür brauchst du mindestens 1 PM.">
@@ -8860,7 +8860,7 @@
       </notes>
       <segment>
         <source>Hierfür brauchst du mindestens 1 PM.</source>
-        <target>Hierfür brauchst du mindestens 1 PM.</target>
+        <target>Necesita al menos 1 PM para esto.</target>
       </segment>
     </unit>
     <unit id="42uqd50">
