FR Translation for distinction detail (game)

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22283,7 +22283,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Auszeichnungsdetails</source>
-        <target>Auszeichnungsdetails</target>
+        <target>Détail des distinctions</target>
       </segment>
     </unit>
   </file>
