EN Translation for distinction details

--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -22381,7 +22381,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Auszeichnungsdetails</source>
-        <target>Auszeichnungsdetails</target>
+        <target>Distinctions details</target>
       </segment>
     </unit>
   </file>
