--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3821,7 +3821,7 @@
       </notes>
       <segment>
         <source>Details</source>
-        <target>Details</target>
+        <target>Détails</target>
       </segment>
     </unit>
     <unit id="2Qh0PhD" name="Auf MyHordes erworbene Auszeichnungen">
@@ -3832,7 +3832,7 @@
       </notes>
       <segment>
         <source>Auf MyHordes erworbene Auszeichnungen</source>
-        <target>Auf MyHordes erworbene Auszeichnungen</target>
+        <target>Distinctions obtenues sur MyHordes</target>
       </segment>
     </unit>
     <unit id="hohD1vV" name="Importierte Auszeichnungen">
@@ -3843,7 +3843,7 @@
       </notes>
       <segment>
         <source>Importierte Auszeichnungen</source>
-        <target>Importierte Auszeichnungen</target>
+        <target>Distinctions importées</target>
       </segment>
     </unit>
   </file>
